--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -68,7 +68,7 @@
                     </div>
                 </div>
 
-                <div class="collapse navbar-collapse" id="navbar-collapse">
+                <div class="collapse navbar-collapse <!--#if $have_rss_defined#-->navbar-have-rss<!--#end if#-->" id="navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="sparkline-container"><span class="sparkline"></span></li>
                         <li class="speedlimit-dropdown dropdown">
@@ -103,6 +103,18 @@
                         <li data-tooltip="true" data-placement="bottom" title="$T('Glitter-statusInterfaceOptions')" data-bind="click: loadStatusInfo">
                             <a href="#modal-options" data-toggle="modal"><span class="glyphicon glyphicon-wrench"></span></a>
                         </li>
+                        <!--#if $have_rss_defined#-->
+                        <li data-tooltip="true" data-placement="bottom" title="$T('cmenu-rss')">
+                            <a href="config/rss">
+                                <svg class="rss-icon-svg" viewBox="0 0 8 8">
+                                    <rect class="rss-button" width="8" height="8" />
+                                    <circle class="rss-symbol" cx="2" cy="6" r="1" />
+                                    <path class="rss-symbol" d="m 1,4 a 3,3 0 0 1 3,3 h 1 a 4,4 0 0 0 -4,-4 z" />
+                                    <path class="rss-symbol" d="m 1,2 a 5,5 0 0 1 5,5 h 1 a 6,6 0 0 0 -6,-6 z" />
+                                </svg>
+                            </a>
+                        </li>
+                        <!--#end if#-->
                         <li data-tooltip="true" data-placement="bottom" title="SABnzbd $T('menu-config')">
                             <a href="config"><span class="glyphicon glyphicon-cog"></span></a>
                         </li>
