Glittery things - part 2
Fix sortable, remove ugly outlines on links for Firefox, click on
search-icon focus on search-box, mobile fixes

--- a/interfaces/Glitter/templates/static/stylesheets/glitter.css
+++ b/interfaces/Glitter/templates/static/stylesheets/glitter.css
@@ -430,6 +430,7 @@ tbody>tr>td:last-child {
 .hover-button {
     opacity: 0.3;
     text-decoration: none;
+    outline: 0 !important;
 }
 
 .hover-button:hover {
